--- a/Frontend/mola_lab/src/pages/css/results.css
+++ b/Frontend/mola_lab/src/pages/css/results.css
@@ -1,6 +1,6 @@
 .download-btn{
     width: 12%;
-    font-size: 20px;
+    font-size: 1.1rem;
     margin-bottom: 0.1rem;
     color: white;
     background-color: #234668;
