--- a/Frontend/mola_lab/src/pages/css/home.css
+++ b/Frontend/mola_lab/src/pages/css/home.css
@@ -12,15 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   }
-  
-  .app {    
-    width: 450px;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-    display: flex;
-    justify-content: space-evenly;
-  }
+
   
   .score-section {
     display: flex;
@@ -32,14 +24,28 @@
   .question-section {
     width: 100%;
     position: relative;
+    margin-bottom: 1rem;
+  }
+
+  .question-sub-sect {
+    width: 100%;
+    display: flex;
+    flex-direction: row;    
+    align-items: center;
+  }
+
+  .back-btn{            
+    width: 5rem;
+    
   }
   
   .question-count {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 4px;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
   }
   
   .question-count span {
@@ -48,8 +54,9 @@
     font-size: 36px;
   }
   
-  .question-text {
-    margin-bottom: 12px;
+  .question-text {    
+    margin-left: 1.2rem;
+    margin-top: 0.5rem;
     font-size: 22px;
     font-weight: bold;
   }
@@ -67,6 +74,8 @@
   /* ANSWERS/RIGHT SECTION */
   .answer-section {
     width: 100%;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -114,9 +123,9 @@
     cursor: pointer;
   }
 
-  .submit-btn {    
-    width: 50%;
-    font-size: 20px;
+  .submit-btn {
+    width: 20%;
+    font-size: 1.1rem;
     margin: 1rem;
     color: white;
     background-color: #234668;
@@ -129,8 +138,44 @@
     cursor: pointer;
   }
 
+  .submit-btn-disabled {
+    width: 20%;
+    opacity: 70%;
+    font-size: 1.1rem;
+    margin: 1rem;
+    color: white;
+    background-color: #234668;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;    
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #234668;
+    cursor: pointer;
+  }
+
+  .skip-btn {    
+    width: 20%;
+    font-size: 20px;
+    margin: 1rem;
+    color: black;    
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;    
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #234668;
+    cursor: pointer;
+  }
+
+  .skip-btn:hover {
+    background-color: #e74c3c;
+    border: 1px solid #e74c3c;
+    color: white;
+  }
+
   .submit_class{
-      margin-top: 1rem;
+      margin-top: 2rem;
       margin-bottom: 0.5rem;
       justify-content: center;
       display: flex;
@@ -138,8 +183,10 @@
   }
   
   .mbutton:hover {
-    background-color: #555e7d;
+    background-color: #234668;
     color: white;
+    transform: scale(1.08);
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
   }
   
   .mbutton:focus {    
